[Optimize][Zh] Optimizing performance documentation for some confusing descriptions
Change-Id: I1cb2b4944b94562c910dc1f0a3b88398f2a3b33a

--- a/docs/zh/api/lynx-api/lynx/lynx-performance.mdx
+++ b/docs/zh/api/lynx-api/lynx/lynx-performance.mdx
@@ -32,7 +32,7 @@ createObserver(callback: PerformanceCallback): PerformanceObserver;
 
 #### 示例
 
-该实例展示了如何创建一个 `PerformanceObserver` 并监听 [`metric.fcp`](api/lynx-api/performance-api/performance-entry/metric-fcp-entry) 和 [`pipeline`](api/lynx-api/performance-api/performance-entry/pipeline-entry) 事件。
+该示例展示了如何创建一个 `PerformanceObserver` 并监听 [`metric.fcp`](api/lynx-api/performance-api/performance-entry/metric-fcp-entry) 和 [`pipeline`](api/lynx-api/performance-api/performance-entry/pipeline-entry) 事件。
 
 import { Go } from '@lynx';
 
