--- a/docs/zh/api/lynx-api/performance-api.mdx
+++ b/docs/zh/api/lynx-api/performance-api.mdx
@@ -8,11 +8,11 @@ context: 'BTS'
 
 ## 概念和用法
 
-Lynx 应用希望在页面加载、元件渲染、用户交互等关键阶段都能保持快速响应。为此性能 API 提供了许多内置指标来描述页面渲染时各个阶段的关键时刻，帮助开发者提高页面性能。使用它们需要了解以下核心概念：
+性能 API 提供了许多内置指标来描述页面渲染时各个阶段的关键时刻，帮助开发者提高页面性能，保证页面在元件渲染、用户交互等关键阶段都能快速响应。使用它们需要了解以下核心概念：
 
 - 入口对象
 
-  [`lynx.performance`](api/lynx-api/lynx/lynx-performance) 是性能监控系统的入口对象，可以使用该对象创建性能观察器。它仅能在应用的[后台运行环境](guide/spec#background-thread-runtime)中访问。
+  [`lynx.performance`](api/lynx-api/lynx/lynx-performance) 是性能监控系统的入口对象，可以使用该对象创建性能观察器。
 
 - 性能观察器
 
@@ -33,5 +33,5 @@ Lynx 应用希望在页面加载、元件渲染、用户交互等关键阶段都
 
 以下指南帮助理解性能 API 的关键概念及功能：
 
-- [评估性能](guide/performance/evaluating-performance)
-- [性能标记](guide/performance/timing-flag)
+- [评估性能](guide/performance/evaluating-performance)：本文是评估页面性能的核心指南，你将在这篇文章中了解评估页面性能时应该重点关注哪些指标，以及在一些典型场景中如何使用它们。
+- [性能标记](guide/performance/timing-flag)：Timing Flag 标记可以帮助你跟踪重要数据更新的性能表现。你将在这篇文章中了解如何使用 `__lynx_timing_flag` 来跟踪 Lynx Pipeline。
