--- a/docs/zh/api/lynx-api/performance-api/performance-entry.mdx
+++ b/docs/zh/api/lynx-api/performance-api/performance-entry.mdx
@@ -43,15 +43,16 @@ name: string;
 
 表示 `PerformanceEntry` 名称的字符串。值取决于 `PerformanceEntry` 的具体类型。所有子类型对应的 `name` 如下表所示：
 
-|                                      子类型                                       |                            name                             |
-| :-------------------------------------------------------------------------------: | :---------------------------------------------------------: |
-|         [`InitContainerEntry`](./performance-entry/init-container-entry)          |                         `container`                         |
-|          [`InitLynxviewEntry`](./performance-entry/init-lynxview-entry)           |                         `lynxview`                          |
-| [`InitBackgroundRuntimeEntry`](./performance-entry/init-background-runtime-entry) |                     `backgroundRuntime`                     |
-|             [`MetricFcpEntry`](./performance-entry/metric-fcp-entry)              |                            `fcp`                            |
-|             [`MetricTtiEntry`](./performance-entry/metric-tti-entry)              |                            `tti`                            |
-|       [`MetricActualFmpEntry`](./performance-entry/metric-actual-fmp-entry)       |                         `actualFmp`                         |
-|            [`LoadBundleEntry`](./performance-entry/load-bundle-entry)             | `loadBundle`, `reloadBundle`, `reloadFromBackgroundRuntime` |
+|                                      子类型                                       |                                           name                                           |
+| :-------------------------------------------------------------------------------: | :--------------------------------------------------------------------------------------: |
+|         [`InitContainerEntry`](./performance-entry/init-container-entry)          |                                       `container`                                        |
+|          [`InitLynxviewEntry`](./performance-entry/init-lynxview-entry)           |                                        `lynxview`                                        |
+| [`InitBackgroundRuntimeEntry`](./performance-entry/init-background-runtime-entry) |                                   `backgroundRuntime`                                    |
+|             [`MetricFcpEntry`](./performance-entry/metric-fcp-entry)              |                                          `fcp`                                           |
+|             [`MetricTtiEntry`](./performance-entry/metric-tti-entry)              |                                          `tti`                                           |
+|       [`MetricActualFmpEntry`](./performance-entry/metric-actual-fmp-entry)       |                                       `actualFmp`                                        |
+|               [`PipelineEntry`](./performance-entry/pipeline-entry)               | `updateTriggeredByBts`, `updateTriggeredByNative`, `updateGlobalProps`, `setNativeProps` |
+|            [`LoadBundleEntry`](./performance-entry/load-bundle-entry)             |                 `loadBundle`, `reloadBundleFromNative`, `reloadFromBts`                  |
 
 ## 兼容性
 
