--- a/docs/zh/api/lynx-api/performance-api/performance-entry/metric-actual-fmp-entry.mdx
+++ b/docs/zh/api/lynx-api/performance-api/performance-entry/metric-actual-fmp-entry.mdx
@@ -16,7 +16,7 @@ Actual Fmp 是衡量页面“真实数据”渲染完成所需时间的关键性
 
 ## 示例
 
-该实例展示了如何产生和获取 `MetricActualFmpEntry`。
+该示例展示了如何产生和获取 `MetricActualFmpEntry`。
 
 import { Go } from '@lynx';
 
