--- a/docs/zh/api/lynx-api/performance-api/performance-entry/metric-tti-entry.mdx
+++ b/docs/zh/api/lynx-api/performance-api/performance-entry/metric-tti-entry.mdx
@@ -13,7 +13,7 @@ TTI 是衡量页面达到可交互状态所需时间的性能指标，`MetricTti
 
 ## 示例
 
-该实例展示了如何获取 `MetricTtiEntry`。
+该示例展示了如何获取 `MetricTtiEntry`。
 
 import { Go } from '@lynx';
 
