--- a/docs/zh/api/lynx-api/performance-api/performance-observer.mdx
+++ b/docs/zh/api/lynx-api/performance-api/performance-observer.mdx
@@ -19,7 +19,7 @@ import { RuntimeBadge } from '@lynx';
 
 ### 创建一个 PerformanceObserver
 
-该实例展示了如何创建一个 `PerformanceObserver` 并监听 [`metric.fcp`](./performance-entry/metric-fcp-entry) 和 [`pipeline`](./performance-entry/pipeline-entry) 事件。
+该示例展示了如何创建一个 `PerformanceObserver` 并监听 [`metric.fcp`](./performance-entry/metric-fcp-entry) 和 [`pipeline`](./performance-entry/pipeline-entry) 事件。
 
 import { Go } from '@lynx';
 
