--- a/docs/zh/api/lynx-api/performance-api/performance-entry/init-background-runtime-entry.mdx
+++ b/docs/zh/api/lynx-api/performance-api/performance-entry/init-background-runtime-entry.mdx
@@ -9,7 +9,7 @@ import { RuntimeBadge } from '@lynx';
 
 ## 示例
 
-该实例展示了如何获取 `InitBackgroundRuntimeEntry`。
+该示例展示了如何获取 `InitBackgroundRuntimeEntry`。
 
 import { Go } from '@lynx';
 
