--- a/docs/zh/api/lynx-api/performance-api/performance-entry/pipeline-entry.mdx
+++ b/docs/zh/api/lynx-api/performance-api/performance-entry/pipeline-entry.mdx
@@ -17,7 +17,7 @@ Lynx Pipeline 是指从渲染触发到最终显示的完整流程。该流程分
 
 ## 示例
 
-该实例展示了如何产生和获取 `PipelineEntry`。
+该示例展示了如何产生和获取 `PipelineEntry`。
 
 import { Go } from '@lynx';
 
