--- a/docs/zh/guide/performance.mdx
+++ b/docs/zh/guide/performance.mdx
@@ -2,15 +2,15 @@
 
 ## 性能是什么
 
-性能主要讨论如何让 Lynx 页面更快的问题。性能优化需要同时达成运行高效与用户体验流畅的双重目标。它包含两个核心维度：**用户感知性能**与**应用运行性能**。
+性能这个话题旨在讨论如何进行性能优化来让页面更快，达成应用运行高效且用户体验流畅的双重目标。性能优化主要围绕两个核心维度展开：**用户感知性能**和**应用运行性能**。
 
 ### 用户感知性能
 
 用户感知性能是衡量用户对页面“快”、“慢”主观感受的概念。它是用户对于页面加载和响应交互速度的感知，是用户对应用性能最直接的主观感受，与用户留存息息相关。
 
-用户打开页面，可能因为各种原因，页面无法第一时间加载，可能会因为认为自己无法访问页面提前退出，导致很差的用户体验。但是可以显示加载动画、友好的提示词或者其他你认为有用的内容来吸引用户注意，让用户认为应用运行顺畅，降低用户对内容加载时间的感知。
+当用户访问页面时，网络环境或系统资源等因素可能导致页面无法立即显示。如果缺乏有效的反馈可能会使用户认为无法访问页面并提前退出。为了改善这种情况，可以展示加载动画、进度条或其他可视化组件，以保持用户的关注度。这些元素帮助用户相信应用在等待过程中仍然在顺畅运行，从而降低跳出率。
 
-由此可以看出优化用户感知性能有利于提高用户留存。然而用户感知性能是用户的主观感受，如何衡量用户感知性能是非常困难的一件事，[性能 API](api/lynx-api/performance-api) 提供了一些指标帮助你评估，更多信息可参考[评估用户感知性能](./performance/evaluating-performance#评估用户感知性能)。
+这样来看，提升用户的感知性能对提高用户留存率极为有利。然而，用户感知性能属于主观体验，因此准确衡量它较为困难且复杂。[性能 API](api/lynx-api/performance-api) 提供了一些指标可以帮助评估用户感知性能。更多信息可参考[评估用户感知性能](./performance/evaluating-performance#评估用户感知性能)指南。
 
 ### 应用运行性能
 
@@ -18,4 +18,4 @@
 
 一个比较差的应用运行性能会表现为“很慢的资源加载速度”或“很慢的页面渲染速度”，这都会导致用户需要长时间等待才能看到页面的内容。而一个长时间加载中或操作无响应的页面，更可能导致用户放弃继续浏览该页面。
 
-分析应用运行性能可以为发现、优化性能瓶颈提供客观依据。基于对初始化、资源准备、渲染流程关键阶段耗时的分析，通过修改资源预加载、数据分割等方法优化渲染管线或优化 Lynx 任务处理逻辑能够改善运行性能，更多信息可参考[评估应用运行性能](./performance/evaluating-performance#评估应用运行性能)。
+对应用运行性能进行分析能够为识别和优化性能瓶颈提供客观依据。通过分析初始化、资源准备以及渲染流程关键阶段的耗时情况，可通过调整资源预加载、数据分块等方法来优化渲染管线，或改善 Lynx 的任务处理逻辑，从而提升运行性能。更多信息可参考[评估应用运行性能](./performance/evaluating-performance#评估应用运行性能)指南。
