[Optimize][EN] opt en performance guide
Change-Id: Ib1614558119efa13ec506769c93cd31dbc5402fc

--- a/docs/en/api/lynx-api/performance-api.mdx
+++ b/docs/en/api/lynx-api/performance-api.mdx
@@ -10,14 +10,12 @@ as loading, rendering, and user interactions.
 
 ## Concepts and usage
 
-Lynx applications aim to maintain fast response times during key stages such as page loading, element rendering, and user interactions. To achieve this, the
-Performance API provides many built-in metrics to describe the key moments during page rendering, assisting developers in enhancing page performance. Understanding
-the following core concepts is helpful for using these APIs:
+The Performance API provides many built-in metrics to describe key moments at various stages of page rendering, helping developers improve page performance. It
+assists developers in ensuring quick response during phases such as component rendering and user interaction. To use them, one needs to understand the following core concepts:
 
 - Entry Object
 
-  [`lynx.performance`](api/lynx-api/lynx/lynx-performance) serves as the entry point to the performance monitoring system. This object can be used to create
-  performance observers. It is only accessible in in the [background thread runtime](guide/spec#background-thread-runtime).
+  [`lynx.performance`](api/lynx-api/lynx/lynx-performance) serves as the entry point to the performance monitoring system.
 
 - Performance Observer
 
@@ -40,5 +38,7 @@ the following core concepts is helpful for using these APIs:
 
 The following guides help you to understand key concepts of the Performance API and provide an overview about its abilities:
 
-- [Evaluating Performance](guide/performance/evaluating-performance)
-- [Timing Flag](guide/performance/timing-flag)
+- [Evaluating Performance](guide/performance/evaluating-performance): This is the core guide for evaluating page performance. The article highlights crucial
+  performance metrics to focus on and demonstrates their application in typical scenarios.
+- [Timing Flag](guide/performance/timing-flag): Timing Flags can help you track the performance of important data updates. This article explains how to use
+  `__lynx_timing_flag` to monitor the [Lynx Pipeline](guide/spec#lynx-pipeline).
