--- a/docs/en/guide/performance.mdx
+++ b/docs/en/guide/performance.mdx
@@ -2,32 +2,31 @@
 
 ## What is Performance
 
-Performance primarily addresses the issue of how to make Lynx pages faster. Performance aims to achieve the dual objectives of efficient operation and smooth user experience.
-It encompasses two core dimensions: **User Perceived Performance** and **Application Runtime Performance**.
+The topic of performance aims to discuss the issue of how to make Lynx pages faster. Performance optimization focuses on improving Lynx page speed through two core
+objectives: maximizing runtime efficiency and ensuring a fluid user experience. It revolves around two core dimensions: **User Perceived Performance** and
+**Application Runtime Performance**.
 
 ### User Perceived Performance
 
-User Perceived Performance is a concept that measures users' subjective perception of a page being "fast" or "slow". It reflects users' perception of page loading and
-interaction response times, directly impacting user retention as it is the most direct subjective experience of application performance.
+User Perceived Performance (UPP) quantifies users’ subjective judgment of a page’s responsiveness, including loading speed and interaction latency. As the primary
+driver of user retention, UPP directly reflects how users experience application performance.
 
-When users open a page, various reasons might prevent it from loading immediately, possibly leading them to exit prematurely, thinking they cannot access the page,
-resulting in a poor user experience. However, displaying a loading animation, friendly tips, or other engaging content can capture users' attention and create an
-impression of smooth application operation, thereby reducing users' perceived content loading time.
+When network latency or insufficient system resources delay page rendering, users may abandon the page if no feedback mechanism (e.g., loading indicators) confirms ongoing progress.
+To address this, displaying loading animations, progress bars, or other visual components can maintain user engagement. These elements reassure users that the
+application is still functioning smoothly during the wait, thereby reducing bounce rates.
 
-Optimizing user perceived performance is crucial for enhancing user retention. However, since it is a subjective feeling, measuring user perceived performance can
-be challenging. The [Performance API](api/lynx-api/performance-api) offers metrics to assist in evaluation; more information can be found in
-[Evaluating User Perceived Performance](./performance/evaluating-performance#evaluating-user-perceived-performance).
+Improving user-perceived performance is highly beneficial for increasing user retention. However, since user perceived performance is subjective, accurately measuring it
+can be challenging and complex. The [Performance API](api/lynx-api/performance-api) provides metrics to help evaluate user-perceived performance. For more details,
+refer to the [Evaluating User Perceived Performance](./performance/evaluating-performance#evaluating-user-perceived-performance).
 
 ### Application Runtime Performance
 
-Application runtime performance measures the concepts of loading and rendering speeds, serving as the technical foundation for supporting user experience. It can be
-represented by the time consumed at critical observable stages, which directly determine the speed at which page content is displayed, thereby affecting user
-perceived performance.
+Application Runtime Performance (ARP) measures quantifiable metrics for page loading and rendering speeds, forming the technical basis for user experience. ARP tracks
+time spent in critical stages (e.g., initialization, resource loading) and directly determines how quickly content becomes visible.
 
-Poor application runtime performance manifests as "slow resource loading speed" or "slow page rendering speed," causing users to wait a long time to see page content.
-Pages that load slowly or are unresponsive can lead users to abandon further browsing.
+Suboptimal ARP manifests as prolonged resource loading or rendering delays, resulting in extended wait time before content becomes interactive. Pages that load slowly
+or are unresponsive can lead users to abandon further browsing.
 
-Analyzing application runtime performance provides an objective basis for identifying and optimizing performance bottlenecks. By analyzing elapsed time at key stages
-such as initialization, resource preparation, and rendering processes, and through methods like modifying resource preloading, data partitioning, optimizing the
-rendering pipeline, or refining Lynx task processing logic, runtime performance can be improved. More information can be found in
+ARP Analysis identifies bottlenecks by profiling time spent in key stages (initialization, resource loading, rendering pipelines). Developers can then implement
+optimizations such as resource preloading, incremental data streaming, or task scheduling logic refinements to enhance runtime efficiency. For more details, refer to the
 [Evaluating Application Runtime Performance](./performance/evaluating-performance#evaluating-application-runtime-performance).
