--- a/docs/zh/api/lynx-api/performance-api.mdx
+++ b/docs/zh/api/lynx-api/performance-api.mdx
@@ -33,5 +33,5 @@ context: 'BTS'
 
 以下指南帮助理解性能 API 的关键概念及功能：
 
-- [评估性能](guide/performance/evaluating-performance)：本文是评估页面性能的核心指南，你将在这篇文章中了解评估页面性能时应该重点关注哪些指标，以及在一些典型场景中如何使用它们。
-- [性能标记](guide/performance/timing-flag)：Timing Flag 标记可以帮助你跟踪重要数据更新的性能表现。你将在这篇文章中了解如何使用 `__lynx_timing_flag` 来跟踪 Lynx Pipeline。
+- [评估性能](guide/performance/evaluating-performance)：这是评估页面性能的核心指南。文中介绍了应重点关注的性能指标，以及如何在典型场景中应用这些指标。
+- [性能标记](guide/performance/timing-flag)：Timing Flag 标记可以帮助你跟踪重要数据更新的性能表现。这篇文章介绍了如何使用 `__lynx_timing_flag` 来跟踪 [Lynx Pipeline](guide/spec#lynx-pipeline)。
