--- a/docs/zh/guide/performance.mdx
+++ b/docs/zh/guide/performance.mdx
@@ -8,14 +8,14 @@
 
 用户感知性能是衡量用户对页面“快”、“慢”主观感受的概念。它是用户对于页面加载和响应交互速度的感知，是用户对应用性能最直接的主观感受，与用户留存息息相关。
 
-当用户访问页面时，网络环境或系统资源等因素可能导致页面无法立即显示。如果缺乏有效的反馈可能会使用户认为无法访问页面并提前退出。为了改善这种情况，可以展示加载动画、进度条或其他可视化组件，以保持用户的关注度。这些元素帮助用户相信应用在等待过程中仍然在顺畅运行，从而降低跳出率。
+当网络环境或系统资源等因素导致页面无法立即显示时，如果缺乏有效的反馈会使用户认为无法访问页面并提前退出。为了改善这种情况，可以展示加载动画、进度条或其他可视化组件，以保持用户的关注度。这些元素帮助用户相信应用在等待过程中仍然在顺畅运行，从而降低跳出率。
 
 这样来看，提升用户的感知性能对提高用户留存率极为有利。然而，用户感知性能属于主观体验，因此准确衡量它较为困难且复杂。[性能 API](api/lynx-api/performance-api) 提供了一些指标可以帮助评估用户感知性能。更多信息可参考[评估用户感知性能](./performance/evaluating-performance#评估用户感知性能)指南。
 
 ### 应用运行性能
 
-应用运行性能是衡量加载、渲染速度的概念，是支撑用户体验的技术基座。它可以通过一系列可观测的关键阶段耗时表示，这些耗时直接决定了页面内容的展示速度，进而影响用户感知性能。
+应用运行性能是衡量加载、渲染速度的概念，是支撑用户体验的技术基座。它可以通过一系列可观测的关键阶段耗时表示。应用运行性能可以直接反映页面的展示速度。
 
 一个比较差的应用运行性能会表现为“很慢的资源加载速度”或“很慢的页面渲染速度”，这都会导致用户需要长时间等待才能看到页面的内容。而一个长时间加载中或操作无响应的页面，更可能导致用户放弃继续浏览该页面。
 
-对应用运行性能进行分析能够为识别和优化性能瓶颈提供客观依据。通过分析初始化、资源准备以及渲染流程关键阶段的耗时情况，可通过调整资源预加载、数据分块等方法来优化渲染管线，或改善 Lynx 的任务处理逻辑，从而提升运行性能。更多信息可参考[评估应用运行性能](./performance/evaluating-performance#评估应用运行性能)指南。
+对应用运行性能进行分析能够为识别和优化性能瓶颈提供客观依据。通过分析初始化、资源准备以及渲染流程关键阶段的耗时情况，开发者可精准识别瓶颈，并采用资源预加载、数据分块等技术优化渲染管线，或重构 Lynx 的任务调度逻辑，从而系统性提升运行性能。更多信息可参考[评估应用运行性能](./performance/evaluating-performance#评估应用运行性能)指南。
