--- a/docs/zh/guide/performance/evaluating-performance.mdx
+++ b/docs/zh/guide/performance/evaluating-performance.mdx
@@ -22,11 +22,11 @@
 
 ![首屏直出的首屏渲染流程](https://lf-lynx.tiktok-cdns.com/obj/lynx-artifacts-oss-sg/lynx-website/assets/doc/first-render-without-network.png '首屏直出的首屏渲染流程')
 
-反之，如果页面依赖额外的数据才能完成显示，例如通过网络下载或本地文件读取等异步方式获取的数据来“真正”完成渲染，那么可以[标记 Lynx 流水线](guide/performance/timing-flag)。标注后，可以获取被标记的 [Lynx Pipeline](guide/spec#lynx-pipeline) 产生的 _ActualFMP_。与无数据请求时不同，这种情况下 FCP 和 TTI 完成时可能展现的是无意义的画面，例如加载动画或骨架屏。
+反之，如果页面依赖额外的数据才能完成显示，例如通过网络下载或本地文件读取等异步方式获取的数据，才能“真正”完成渲染。那么你可以[标记 Lynx 流水线](guide/performance/timing-flag)来跟踪这次重要的数据更新。标记后，可以获取被标记的 [Lynx Pipeline](guide/spec#lynx-pipeline) 产生的 _ActualFMP_。与无数据请求时不同，这种情况下 FCP 和 TTI 完成时可能展现的是无意义的画面，例如加载动画或骨架屏。
 
 ![带网络请求的首屏渲染流程图](https://lf-lynx.tiktok-cdns.com/obj/lynx-artifacts-oss-sg/lynx-website/assets/doc/first-render-with-network.png '带网络请求的首屏渲染流程')
 
-由此你也可以发现，显示真实数据需要消耗额外的处理时间，这与提升用户感知性能的基本准则相悖。因此为了提高用户感受到的性能，首屏展示的内容应该尽可能是静态内容或者预加载内容，其余内容再依赖网络下载并在后续的数据更新中显示。这种方式虽然增加了总的数据下载量，但是通过更早渲染有意义的内容可以极大提升用户感受到的性能。
+由此你也可以发现，显示真实数据需要消耗额外的处理时间，这与提升用户感知性能的基本准则相悖。因此为了提高用户感受到的性能，首屏展示的内容应该尽可能是静态内容或者预加载内容，其余内容再依赖网络下载并在后续的数据更新中显示。这种方式可能增加了总的数据下载量，但是通过更早渲染有意义的内容可以极大提升用户感受性能。
 
 ## 评估应用运行性能
 
@@ -42,7 +42,7 @@
 
 ![完整的初始化阶段划分](https://lf-lynx.tiktok-cdns.com/obj/lynx-artifacts-oss-sg/lynx-website/assets/doc/all-init-process.png '完整的初始化阶段划分')
 
-即使这些准备工作发生在页面渲染之前，它们性能好坏也对用户体验有直接影响。过慢的初始化速度会导致更晚的渲染，从而导致用户很晚才能看到内容进而认为应用性能很差。为了尽可能降低加载阶段的耗时，你可以通过缓存、预加载和预创建等手段预先完成这些工作，确保第一时间响应用户交互，提升用户体验。
+即使这些准备工作发生在页面渲染之前，它们性能好坏也对用户体验有直接影响。过慢的初始化速度会导致更晚的渲染，从而导致用户很晚才能看到内容进而认为应用性能很差。为了尽可能降低加载阶段的耗时，你可以通过本地缓存、预加载 TemplateBundle 和预创建 LynxView 等手段预先完成这些初始化工作，确保第一时间响应用户交互，提升用户体验。
 
 ### 渲染
 
@@ -56,9 +56,9 @@
 
 ## 构建自定义的性能评估指标
 
-不同的业务目标意味着你可能需要关注不同的性能指标。对[性能 API](api/lynx-api/performance-api) 的使用可以不局限于通过内置指标来分析页面性能，你也可以灵活组合不同 [`PerformanceEntry`](api/lynx-api/performance-api/performance-entry) 提供给你的关键节点的时间，构建出一套适配你的应用程序的性能检测指标。
+不同的业务目标意味着你需要关注不同的性能指标。对[性能 API](api/lynx-api/performance-api) 的使用可以不局限于通过内置指标来分析页面性能，你也可以灵活组合不同 [`PerformanceEntry`](api/lynx-api/performance-api/performance-entry) 提供给你的关键节点的时间，构建出一套适配你的应用程序的性能检测指标。
 
-假如你希望关注从首屏渲染结束到首次重要数据更新的时间间隔，来优化用户第二时间看到更多、更丰富信息的速度，你可以像下面的代码这样灵活组合 [`LoadBundleEntry`](api/lynx-api/performance-api/performance-entry/load-bundle-entry) 和
+假如你希望关注从首屏渲染结束到首次重要数据更新的延迟，你可以像下面的代码这样灵活组合 [`LoadBundleEntry`](api/lynx-api/performance-api/performance-entry/load-bundle-entry) 和
 [`PipelineEntry`](api/lynx-api/performance-api/performance-entry/pipeline-entry) 计算出一个属于你的性能指标 `waitingDuration`。它可以帮助你监测网络请求、文件读取等行为的速度，精准定位页面性能变坏的原因。
 
 ![waiting duration](https://lf-lynx.tiktok-cdns.com/obj/lynx-artifacts-oss-sg/lynx-website/assets/doc/custom-metric-waitingduration.png)
