[Optimize] Clarify the timing and content of sending metric entry
In this CR, we have clarified the timing and content of sending metric performance entry. Due to the instability in recording container-related timestamps, we cannot guarantee that all metrics will be provided each time. Therefore, we may send metric performance entry multiple times.

Change-Id: I3076a476aaf683d9fec99767b787208ca223cefd

--- a/docs/en/api/lynx-api/performance-api/performance-entry/metric-actual-fmp-entry.mdx
+++ b/docs/en/api/lynx-api/performance-api/performance-entry/metric-actual-fmp-entry.mdx
@@ -16,6 +16,8 @@ Depending on different starting points, Lynx provides three metrics: `actualFmp`
 
 This example demonstrates how to generate and obtain a `MetricActualFmpEntry`.
 
+Lynx calculates the Actual Fmp when the marked elements have finished rendering. If you have provided container-related timestamps using [LynxView.setExtraTiming](api/lynx-native-api/lynx-view/set-extra-timing), the `MetricActualFmpEntry` includes three metrics: `actualFmp`, `lynxActualFmp`, and `totalActualFmp`. Otherwise, the `MetricActualFmpEntry` only contains `lynxActualFmp`. After supplementing the container timestamp, the remaining metrics will be recalculated. Once recalculation is complete, Lynx will send a new `lynxActualFmp` containing all the metrics.
+
 import { Go } from '@lynx';
 
 <Go
@@ -47,7 +49,7 @@ The specific name of the performance event; the value for all instances of this 
 ### actualFmp
 
 ```ts
-actualFmp: PerformanceMetric;
+actualFmp?: PerformanceMetric;
 ```
 
 The time taken from preparing the [TemplateBundle](api/lynx-native-api/template-bundle) to the completion of rendering for components and tags marked with `__lynx_timing_flag="__lynx_timing_actual_fmp"`, with a data type of [`PerformanceMetric`](api/lynx-api/performance-api/performance-metric).
@@ -67,7 +69,7 @@ Calculation formula: `lynxActualFmp = PipelineEntry.paintEnd - LoadBundleEntry.l
 ### totalActualFmp
 
 ```ts
-totalActualFmp: PerformanceMetric;
+totalActualFmp?: PerformanceMetric;
 ```
 
 The time taken from the user opening the page to the completion of rendering for components and tags marked with `__lynx_timing_flag="__lynx_timing_actual_fmp"`, with a data type of [`PerformanceMetric`](api/lynx-api/performance-api/performance-metric).
